--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.56.1",
     "@tanstack/react-query": "^5.8.0",
+    "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.0",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
@@ -24,6 +25,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.0",
     "postcss": "^8.4.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.0",
