--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.0",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-auth": "^4.24.0",
