--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "prebuild": "npm run design:validate"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.56.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.8.0",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.0",
@@ -23,7 +21,7 @@
     "framer-motion": "^10.16.0",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^14.2.32",
     "next-auth": "^4.24.0",
     "postcss": "^8.4.0",
     "qrcode": "^1.5.4",
